--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.19.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.1",
     "react-d3-tree": "^3.6.6",
-    "web-vitals": "^2.1.4",
-    "react-scripts": "^5.0.1"
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,5 +60,5 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"    
+  "license": "ISC"
 }
